# advent-of-code

./: .gitignore  Makefile  advent-of-code.cabal  cabal.project.freeze  fourmolu.yaml  package.yaml  stack.yaml
app/: Api.hs  Cli.hs  Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: ComonadGrid.hs  Grid.hs  Search.hs  Utils.hs
src/Year2023/: Day01.hs  Day02.hs  Day03.hs
src/Year2024/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
src/Year2025/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs
test/: GridSpec.hs  Tests.hs  UtilsSpec.hs
