cabal-version:   3.0
name:            advent-of-code
version:         0.1.0.0
license:
author:          ondrej.hlavacka
maintainer:      o.hlavacka@seznam.cz
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable advent-of-code
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
