cabal-version:   3.0
name:            advent-of-code
version:         0.1.0.0
license:
author:          ondrej.hlavacka
maintainer:      o.hlavacka@seznam.cz
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:
        Utils
        Year2023.Day01
        Year2023.Day02
        Year2023.Day03
        Year2024.Day01
        Year2024.Day02
        Year2024.Day03
        Year2024.Day04

    -- Year2024.Day04
    -- Year2024.Day05
    -- Year2024.Day06
    -- Year2024.Day07
    -- Year2024.Day08
    -- Year2024.Day09
    -- Year2024.Day10
    -- Year2024.Day11
    -- Year2024.Day12
    -- Year2024.Day13
    -- Year2024.Day14
    -- Year2024.Day15
    -- Year2024.Day16
    -- Year2024.Day17
    -- Year2024.Day18
    -- Year2024.Day19
    -- Year2024.Day20
    -- Year2024.Day21
    -- Year2024.Day22
    -- Year2024.Day23
    -- Year2024.Day24
    -- Year2024.Day25

    build-depends:
        , base        ^>=4.17.2.1
        , containers
        , split
        , text

    default-language: Haskell2010

executable advent-of-code
    import:           warnings
    main-is:          Main.hs
    build-depends:
        , advent-of-code
        , base            ^>=4.17.2.1

    hs-source-dirs:   app
    default-language: Haskell2010
